# dev-plugins

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  changelog.md  download_libs.py  readme.md  release.json
dspdev/qwqdsp/attemps/: CMakeLists.txt  paralle_allpass.cpp
plugins/: CMakeLists.txt
plugins/analog-synth/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/analog-synth/source/dsp/: abstract_synth.hpp  chorus.hpp  debug_synth.hpp  delay.hpp  envelope.hpp  filter.hpp  imodulator.hpp  lfo.hpp  osc4.hpp  phaser.hpp  reverb.hpp  synth.cpp  synth.hpp  synth2.hpp
plugins/analog-synth/source/ui/: adsr.cpp  adsr.hpp  chorus.cpp  chorus.hpp  delay.cpp  delay.hpp  distortion.cpp  distortion.hpp  filter.cpp  filter.hpp  fx_chain.cpp  fx_chain.hpp  lfo.cpp  marcos.hpp  modulations.cpp  modulations.hpp  noise.hpp  osc1.cpp  osc1.hpp  osc2.cpp  osc2.hpp  osc3.cpp  osc3.hpp  osc4.cpp  osc4.hpp  phaser.cpp  reverb.cpp  reverb.hpp  voices.cpp  voices.hpp
plugins/analog_synth/: readme.md
plugins/analog_synth/source/: PluginEditor.h  PluginProcessor.cpp
plugins/analog_synth/source/dsp/: abstract_synth.hpp  chorus.hpp  constant.hpp  debug_synth.hpp  delay.hpp  envelope.hpp  filter.cpp  filter.hpp  imodulator.hpp  lfo.hpp  osc4.hpp  phaser.hpp  reverb.hpp  synth.cpp  synth.hpp  wrap_parameters.hpp
plugins/analog_synth/source/ui/: bpm_dial.hpp  chorus.cpp  chorus.hpp  delay.cpp  delay.hpp  distortion.cpp  filter.cpp  filter.hpp  lfo.hpp  marcos.cpp  modulations.cpp  noise.cpp  osc2.cpp  osc2.hpp  osc4.cpp  phaser.hpp  reverb.hpp  voices.cpp  voices.hpp
plugins/chorus/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/chorus/source/dsp/: Pitcher.cpp  Pitcher.h  chorus.cpp  chorus.hpp
plugins/compressor/: readme.md
plugins/compressor/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/debugger/: readme.md
plugins/debugger/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  phase_vocoder.hpp  plugin_ui.cpp  plugin_ui.hpp
plugins/deep-phaser/: readme.md
plugins/deep-phaser/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  shared.hpp
plugins/deep_phaser/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  deep_phaser.hpp  shared.hpp
plugins/dispersive-delay/: readme.md
plugins/dispersive-delay/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/dispersive_delay/: readme.md
plugins/dispersive_delay/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h
plugins/empty/: readme.md
plugins/empty/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/ewarp/: readme.md
plugins/ewarp/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ewarp.hpp
plugins/green-vocoder/: readme.md
plugins/green-vocoder/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  channel_mix.hpp  param_ids.hpp  tooltips.cpp
plugins/green_vocoder/: readme.md
plugins/green_vocoder/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  channel_mix.hpp  param_ids.hpp  plugin_ui.cpp  plugin_ui.hpp  tooltips.hpp
plugins/resonator/: readme.md
plugins/resonator/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ThrianAllpass.cpp  ThrianAllpass.hpp  config.hpp  poly_manager.hpp  resonator.hpp
plugins/shared/: component.hpp  juce_param_listener.hpp
plugins/shared/pluginshared/: bpm_sync_lfo.hpp  bpm_sync_ui.hpp  component.hpp  juce_param_listener.hpp  preset_manager.hpp  preset_panel.hpp  update_data.hpp  update_gui.hpp  version.hpp  wrap_parameters.hpp
plugins/steep-flanger/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  readme.md
plugins/steep-flanger/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  shared.hpp  vec4.cpp  vec8.cpp
plugins/steep_flanger/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  shared.hpp  steep_flanger.hpp  vec4.cpp  vec8.cpp
plugins/vital-chorus/: readme.md
plugins/vital-chorus/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/vital-reverb/: readme.md
plugins/vital-reverb/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  vital_reverb.hpp
plugins/vital_chorus/: readme.md
plugins/vital_chorus/source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  vital_chorus.hpp
plugins/vital_reverb/source/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp  vital_reverb.hpp
qwqdsp/: CMakeLists.txt  readme.md  todo.md
qwqdsp/attemps/: minimum_phase_fir.cpp
qwqdsp/examples/: CMakeLists.txt  convolution.cpp  interpolations.cpp  minimum_phase_fir.cpp  readme.txt
qwqdsp/include/pitch/: yin.hpp
qwqdsp/include/qwqdsp/: adsr_envelope.hpp  algebraic_waveshaper.hpp  cheb2_bp.hpp  convert.hpp  crossover.hpp  delay_line.hpp  extension_marcos.hpp  fastmath.hpp  force_inline.hpp  iir_cpx_hilbert.hpp  iir_hilbert.hpp  iir_hilbert4.hpp  interpolation.hpp  interpolation4.hpp  noise.hpp  performance.hpp  polymath.hpp  qwqdsp.hpp  segement_process.hpp  smoother.hpp  thiran_filter.hpp
qwqdsp/playing/: playing.cpp
qwqdsp/source/: complex_fft.cpp  ipp_init.cpp  oouras.cpp  playing.cpp  real_fft.cpp
qwqdsp/tests/: CMakeLists.txt  biquad.cpp  blit.cpp  convolution.cpp  dsf.cpp  fft_interpolation.cpp  fir_design.cpp  formant_filter.cpp  freq_shifter.cpp  interpolations.cpp  minimum_phase_fir.cpp  paralle_allpass.cpp  polyblep.cpp  resample.cpp  stupid_resynthsis.cpp  wsola.cpp
(+355 files in other folders)
