add_library(PluginShared INTERFACE)
target_include_directories(PluginShared INTERFACE shared)

add_subdirectory(steep-flanger/source)
add_subdirectory(green-vocoder/source)
add_subdirectory(dispersive-delay/source)
add_subdirectory(resonator/source)
add_subdirectory(vital-reverb/source)
add_subdirectory(vital-chorus/source)
add_subdirectory(deep-phaser/source)
add_subdirectory(compressor/source)
add_subdirectory(analog-synth/source)