add_library(PluginShared INTERFACE)
target_include_directories(PluginShared INTERFACE shared)

add_subdirectory(steep_flanger/source)
add_subdirectory(green_vocoder/source)
add_subdirectory(dispersive_delay/source)
add_subdirectory(resonator/source)
add_subdirectory(vital_reverb/source)
add_subdirectory(vital_chorus/source)
add_subdirectory(deep_phaser/source)

if(NOT DEFINED CI_PLUGIN_BUILD)
    add_subdirectory(ewarp/source)
    add_subdirectory(analog_synth/source)
    add_subdirectory(debugger/source)
endif()
